<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:onClick="Jugadores2"
        android:text="@string/boton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:onClick="Jugadores3"
        android:text="@string/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:onClick="Jugadores4"
        android:text="@string/boton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:text="@string/boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/texto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>